// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header auth click 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <styled.nav>
    <div>
        fcc-voting
    </div>
    <div>
        HOME
    </div>
    <styled.section>
        <div>
            My Polls
        </div>
        <div>
            New Poll
        </div>
        <div
            id="sign"
            onClick={[Function]}
        >
            hyc
        </div>
    </styled.section>
</styled.nav>,
  "nodes": Array [
    <styled.nav>
      <div>
            fcc-voting
      </div>
      <div>
            HOME
      </div>
      <styled.section>
            <div>
                  My Polls
            </div>
            <div>
                  New Poll
            </div>
            <div
                  id="sign"
                  onClick={[Function]}
            >
                  hyc
            </div>
      </styled.section>
</styled.nav>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Header
        toggleLogin={[Function]}
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Header {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handlerClickAuth": [Function],
        "props": Object {
          "toggleLogin": [Function],
        },
        "refs": Object {},
        "renderAuthDiv": [Function],
        "renderAuthed": [Function],
        "renderUnAuth": [Function],
        "state": Object {
          "user": Object {
            "username": "hyc",
          },
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <styled.section>
                    <div>
                              My Polls
                    </div>
                    <div>
                              New Poll
                    </div>
                    <div
                              id="sign"
                              onClick={[Function]}
                    >
                              hyc
                    </div>
          </styled.section>
</styled.nav>,
        "_debugID": 6,
        "_renderedOutput": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <styled.section>
                    <div>
                              My Polls
                    </div>
                    <div>
                              New Poll
                    </div>
                    <div
                              id="sign"
                              onClick={[Function]}
                    >
                              hyc
                    </div>
          </styled.section>
</styled.nav>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Header
    toggleLogin={[Function]}
/>,
}
`;

exports[`Header auth render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <styled.nav>
    <div>
        fcc-voting
    </div>
    <div>
        HOME
    </div>
    <styled.section>
        <div>
            My Polls
        </div>
        <div>
            New Poll
        </div>
        <div
            id="sign"
            onClick={[Function]}
        >
            hyc
        </div>
    </styled.section>
</styled.nav>,
  "nodes": Array [
    <styled.nav>
      <div>
            fcc-voting
      </div>
      <div>
            HOME
      </div>
      <styled.section>
            <div>
                  My Polls
            </div>
            <div>
                  New Poll
            </div>
            <div
                  id="sign"
                  onClick={[Function]}
            >
                  hyc
            </div>
      </styled.section>
</styled.nav>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Header
        toggleLogin={[Function]}
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Header {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handlerClickAuth": [Function],
        "props": Object {
          "toggleLogin": [Function],
        },
        "refs": Object {},
        "renderAuthDiv": [Function],
        "renderAuthed": [Function],
        "renderUnAuth": [Function],
        "state": Object {
          "user": Object {
            "username": "hyc",
          },
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <styled.section>
                    <div>
                              My Polls
                    </div>
                    <div>
                              New Poll
                    </div>
                    <div
                              id="sign"
                              onClick={[Function]}
                    >
                              hyc
                    </div>
          </styled.section>
</styled.nav>,
        "_debugID": 4,
        "_renderedOutput": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <styled.section>
                    <div>
                              My Polls
                    </div>
                    <div>
                              New Poll
                    </div>
                    <div
                              id="sign"
                              onClick={[Function]}
                    >
                              hyc
                    </div>
          </styled.section>
</styled.nav>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Header
    toggleLogin={[Function]}
/>,
}
`;

exports[`Header unauth render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <styled.nav>
    <div>
        fcc-voting
    </div>
    <div>
        HOME
    </div>
    <div
        id="sign"
        onClick={[Function]}
    >
        Sign in/up
    </div>
</styled.nav>,
  "nodes": Array [
    <styled.nav>
      <div>
            fcc-voting
      </div>
      <div>
            HOME
      </div>
      <div
            id="sign"
            onClick={[Function]}
      >
            Sign in/up
      </div>
</styled.nav>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Header
        toggleLogin={[Function]}
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Header {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handlerClickAuth": [Function],
        "props": Object {
          "toggleLogin": [Function],
        },
        "refs": Object {},
        "renderAuthDiv": [Function],
        "renderAuthed": [Function],
        "renderUnAuth": [Function],
        "state": Object {
          "user": undefined,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <div
                    id="sign"
                    onClick={[Function]}
          >
                    Sign in/up
          </div>
</styled.nav>,
        "_debugID": 2,
        "_renderedOutput": <styled.nav>
          <div>
                    fcc-voting
          </div>
          <div>
                    HOME
          </div>
          <div
                    id="sign"
                    onClick={[Function]}
          >
                    Sign in/up
          </div>
</styled.nav>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Header
    toggleLogin={[Function]}
/>,
}
`;
